--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,8 +6,15 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     script: |
       docker build -t northamerica-northeast2-docker.pkg.dev/ncpl-449223/ncpl-project2/spring-boot-app:latest .
-      
     automapSubstitutions: true
+  
+  - name: "gcr.io/cloud-builders/gke-deploy"
+    args:
+      - run
+      - --filename=gke.yaml
+      - --image=northamerica-northeast2-docker.pkg.dev/ncpl-449223/ncpl-project2/spring-boot-app:latest
+      - --location=northamerica-northeast2
+      - --cluster=ncpl-gke-cluster
 
 images:
   - 'northamerica-northeast2-docker.pkg.dev/ncpl-449223/ncpl-project2/spring-boot-app:latest'
